syntax = 'proto3';

package protobuf;

option go_package = ".;protobuf";

service SendAnalysisResult {
    rpc SendAnalysisResult (RequestValue) returns (ResponseValue) {}
}

message RequestValue {
    repeated OpenMCPHPAInfo HpaInfo = 1;
}

message OpenMCPHPAInfo {
    string DeploymentName = 1;
    string DeploymentNamespace = 2;
    repeated ClusterList CL = 3;
}

message ClusterList {
    string ClusterName = 1;
}

message ResponseValue {
    string TargetCluster = 1;
}