syntax = 'proto3';

package protobuf;

import "google/protobuf/Timestamp.proto";

option go_package = ".;protobuf";

service SendMetrics {
	rpc SendMetrics (Collection) returns (ReturnValue) {}
}

message Collection {
    repeated MetricsBatch Matricsbatchs = 1;
}

message MetricsBatch {
    string IP = 1;
	NodeMetricsPoint Node = 2;
	repeated PodMetricsPoint Pods = 3;
}
message NodeMetricsPoint {
	string Name = 1;
	MetricsPoint MP = 2;
}
message PodMetricsPoint {
	string Name = 1;
	string Namespace = 2;
	MetricsPoint MP = 3;
	repeated ContainerMetricsPoint Containers = 4;
}
message ContainerMetricsPoint {
    string Name = 1;
    MetricsPoint MP = 2;
}
message MetricsPoint {
    google.protobuf.Timestamp Timestamp = 1;
    string CpuUsage = 2;
    string MemoryUsage = 3;
    string NetworkRxUsage = 4;
    string NetworkTxUsage = 5;
    string FsUsage = 6;
}
message ReturnValue {
	int64 Tick = 1;
	string ClusterName = 2;
}
